parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class
    3        | Classes Class

    4 Class: T_ID T_OPENBRACE Members Methods T_CLOSEBRACE
    5      | T_ID T_EXTENDS T_ID T_OPENBRACE Members Methods T_CLOSEBRACE

    6 Members: Members Member
    7        | %empty

    8 Methods: Method Methods
    9        | %empty

   10 Member: Type T_ID T_SEMICOLON

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE

   12 Type: T_INTEGER
   13     | T_BOOLEAN
   14     | T_ID

   15 Parameters: Parameters T_COMMA Parameter
   16           | Parameter
   17           | %empty

   18 ReturnType: Type
   19           | T_NONE

   20 MethodBody: Declarations Statements Return

   21 Parameter: Type T_ID

   22 Declarations: Declarations Declaration
   23             | %empty

   24 Statements: Statement Statements
   25           | %empty

   26 Return: T_RETURN Expression T_SEMICOLON
   27       | %empty

   28 Declaration: Type Vairables T_SEMICOLON

   29 Statement: Assignment
   30          | MethodCall
   31          | IfElse
   32          | While
   33          | DoWhile
   34          | Print

   35 Expression: Expression T_PLUS Expression
   36           | Expression T_MINUS Expression
   37           | Expression T_MULTIPLY Expression
   38           | Expression T_DIVIDE Expression
   39           | Expression T_LARGERTHAN Expression
   40           | Expression T_LARGEREQUAL Expression
   41           | Expression T_EQUALS Expression
   42           | Expression T_AND Expression
   43           | Expression T_OR Expression
   44           | T_NOT Expression
   45           | T_MINUS Expression
   46           | T_ID
   47           | T_ID T_DOT T_ID
   48           | MethodCall
   49           | T_OPENPAREN Expression T_CLOSEPAREN
   50           | T_NUMBER
   51           | T_TRUE
   52           | T_FALSE
   53           | T_NEW T_ID
   54           | T_NEW T_ID T_OPENPAREN Argument T_CLOSEPAREN

   55 Assignment: T_ID T_ASSIGN Expression T_SEMICOLON
   56           | T_ID T_DOT T_ID T_ASSIGN Expression T_SEMICOLON

   57 MethodCall: T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON
   58           | T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON

   59 IfElse: T_IF Expression T_OPENBRACE BlockStatements T_CLOSEBRACE
   60       | T_IF Expression T_OPENBRACE BlockStatements T_CLOSEBRACE T_ELSE T_OPENBRACE BlockStatements T_CLOSEBRACE

   61 While: T_WHILE Expression T_OPENBRACE BlockStatements T_CLOSEBRACE

   62 DoWhile: T_DO T_OPENBRACE BlockStatements T_CLOSEBRACE T_WHILE T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

   63 Print: T_PRINT Expression T_SEMICOLON

   64 Arguments: Argument
   65          | %empty

   66 Argument: Argument T_COMMA Expression
   67         | Expression

   68 BlockStatements: BlockStatements Statement
   69                | Statement

   70 Vairables: T_ID
   71          | Vairables T_COMMA T_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 50
T_ID (259) 4 5 10 11 14 21 46 47 53 54 55 56 57 58 70 71
T_PLUS (260) 35
T_MINUS (261) 36 45
T_MULTIPLY (262) 37
T_DIVIDE (263) 38
T_LARGERTHAN (264) 39
T_LARGEREQUAL (265) 40
T_EQUALS (266) 41
T_AND (267) 42
T_OR (268) 43
T_NOT (269) 44
T_ASSIGN (270) 55 56
T_OPENPAREN (271) 11 49 54 57 58 62
T_CLOSEPAREN (272) 11 49 54 57 58 62
T_OPENBRACE (273) 4 5 11 59 60 61 62
T_CLOSEBRACE (274) 4 5 11 59 60 61 62
T_DOT (275) 47 56 58
T_COMMA (276) 15 66 71
T_SEMICOLON (277) 10 26 28 55 56 57 58 62 63
T_ARROW (278) 11
T_RETURN (279) 26
T_EXTENDS (280) 5
T_DO (281) 62
T_NEW (282) 53 54
T_IF (283) 59 60
T_ELSE (284) 60
T_WHILE (285) 61 62
T_PRINT (286) 63
T_NONE (287) 19
T_BOOLEAN (288) 13
T_INTEGER (289) 12
T_TRUE (290) 51
T_FALSE (291) 52
T_UNARYMINUS (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Classes (40)
    on left: 2 3, on right: 1 3
Class (41)
    on left: 4 5, on right: 2 3
Members (42)
    on left: 6 7, on right: 4 5 6
Methods (43)
    on left: 8 9, on right: 4 5 8
Member (44)
    on left: 10, on right: 6
Method (45)
    on left: 11, on right: 8
Type (46)
    on left: 12 13 14, on right: 10 18 21 28
Parameters (47)
    on left: 15 16 17, on right: 11 15
ReturnType (48)
    on left: 18 19, on right: 11
MethodBody (49)
    on left: 20, on right: 11
Parameter (50)
    on left: 21, on right: 15 16
Declarations (51)
    on left: 22 23, on right: 20 22
Statements (52)
    on left: 24 25, on right: 20 24
Return (53)
    on left: 26 27, on right: 20
Declaration (54)
    on left: 28, on right: 22
Statement (55)
    on left: 29 30 31 32 33 34, on right: 24 68 69
Expression (56)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54, on right: 26 35 36 37 38 39 40 41 42 43 44 45 49 55 56 59
    60 61 62 63 66 67
Assignment (57)
    on left: 55 56, on right: 29
MethodCall (58)
    on left: 57 58, on right: 30 48
IfElse (59)
    on left: 59 60, on right: 31
While (60)
    on left: 61, on right: 32
DoWhile (61)
    on left: 62, on right: 33
Print (62)
    on left: 63, on right: 34
Arguments (63)
    on left: 64 65, on right: 57 58
Argument (64)
    on left: 66 67, on right: 54 64 66
BlockStatements (65)
    on left: 68 69, on right: 59 60 61 62 68
Vairables (66)
    on left: 70 71, on right: 28 71


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_ID . T_OPENBRACE Members Methods T_CLOSEBRACE
    5      | T_ID . T_EXTENDS T_ID T_OPENBRACE Members Methods T_CLOSEBRACE

    T_OPENBRACE  shift, and go to state 5
    T_EXTENDS    shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    3 Classes: Classes . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    2 Classes: Class .

    $default  reduce using rule 2 (Classes)


State 5

    4 Class: T_ID T_OPENBRACE . Members Methods T_CLOSEBRACE

    $default  reduce using rule 7 (Members)

    Members  go to state 9


State 6

    5 Class: T_ID T_EXTENDS . T_ID T_OPENBRACE Members Methods T_CLOSEBRACE

    T_ID  shift, and go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    3 Classes: Classes Class .

    $default  reduce using rule 3 (Classes)


State 9

    4 Class: T_ID T_OPENBRACE Members . Methods T_CLOSEBRACE
    6 Members: Members . Member

    T_ID       shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    $default  reduce using rule 9 (Methods)

    Methods  go to state 14
    Member   go to state 15
    Method   go to state 16
    Type     go to state 17


State 10

    5 Class: T_ID T_EXTENDS T_ID . T_OPENBRACE Members Methods T_CLOSEBRACE

    T_OPENBRACE  shift, and go to state 18


State 11

   11 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE
   14 Type: T_ID .

    T_OPENPAREN  shift, and go to state 19

    $default  reduce using rule 14 (Type)


State 12

   13 Type: T_BOOLEAN .

    $default  reduce using rule 13 (Type)


State 13

   12 Type: T_INTEGER .

    $default  reduce using rule 12 (Type)


State 14

    4 Class: T_ID T_OPENBRACE Members Methods . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 20


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    8 Methods: Method . Methods

    T_ID  shift, and go to state 21

    $default  reduce using rule 9 (Methods)

    Methods  go to state 22
    Method   go to state 16


State 17

   10 Member: Type . T_ID T_SEMICOLON

    T_ID  shift, and go to state 23


State 18

    5 Class: T_ID T_EXTENDS T_ID T_OPENBRACE . Members Methods T_CLOSEBRACE

    $default  reduce using rule 7 (Members)

    Members  go to state 24


State 19

   11 Method: T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE

    T_ID       shift, and go to state 25
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    $default  reduce using rule 17 (Parameters)

    Type        go to state 26
    Parameters  go to state 27
    Parameter   go to state 28


State 20

    4 Class: T_ID T_OPENBRACE Members Methods T_CLOSEBRACE .

    $default  reduce using rule 4 (Class)


State 21

   11 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE

    T_OPENPAREN  shift, and go to state 19


State 22

    8 Methods: Method Methods .

    $default  reduce using rule 8 (Methods)


State 23

   10 Member: Type T_ID . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 29


State 24

    5 Class: T_ID T_EXTENDS T_ID T_OPENBRACE Members . Methods T_CLOSEBRACE
    6 Members: Members . Member

    T_ID       shift, and go to state 11
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    $default  reduce using rule 9 (Methods)

    Methods  go to state 30
    Member   go to state 15
    Method   go to state 16
    Type     go to state 17


State 25

   14 Type: T_ID .

    $default  reduce using rule 14 (Type)


State 26

   21 Parameter: Type . T_ID

    T_ID  shift, and go to state 31


State 27

   11 Method: T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE
   15 Parameters: Parameters . T_COMMA Parameter

    T_CLOSEPAREN  shift, and go to state 32
    T_COMMA       shift, and go to state 33


State 28

   16 Parameters: Parameter .

    $default  reduce using rule 16 (Parameters)


State 29

   10 Member: Type T_ID T_SEMICOLON .

    $default  reduce using rule 10 (Member)


State 30

    5 Class: T_ID T_EXTENDS T_ID T_OPENBRACE Members Methods . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 34


State 31

   21 Parameter: Type T_ID .

    $default  reduce using rule 21 (Parameter)


State 32

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN . T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE

    T_ARROW  shift, and go to state 35


State 33

   15 Parameters: Parameters T_COMMA . Parameter

    T_ID       shift, and go to state 25
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    Type       go to state 26
    Parameter  go to state 36


State 34

    5 Class: T_ID T_EXTENDS T_ID T_OPENBRACE Members Methods T_CLOSEBRACE .

    $default  reduce using rule 5 (Class)


State 35

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW . ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE

    T_ID       shift, and go to state 25
    T_NONE     shift, and go to state 37
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    Type        go to state 38
    ReturnType  go to state 39


State 36

   15 Parameters: Parameters T_COMMA Parameter .

    $default  reduce using rule 15 (Parameters)


State 37

   19 ReturnType: T_NONE .

    $default  reduce using rule 19 (ReturnType)


State 38

   18 ReturnType: Type .

    $default  reduce using rule 18 (ReturnType)


State 39

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType . T_OPENBRACE MethodBody T_CLOSEBRACE

    T_OPENBRACE  shift, and go to state 40


State 40

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE . MethodBody T_CLOSEBRACE

    $default  reduce using rule 23 (Declarations)

    MethodBody    go to state 41
    Declarations  go to state 42


State 41

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody . T_CLOSEBRACE

    T_CLOSEBRACE  shift, and go to state 43


State 42

   20 MethodBody: Declarations . Statements Return
   22 Declarations: Declarations . Declaration

    T_ID       shift, and go to state 44
    T_DO       shift, and go to state 45
    T_IF       shift, and go to state 46
    T_WHILE    shift, and go to state 47
    T_PRINT    shift, and go to state 48
    T_BOOLEAN  shift, and go to state 12
    T_INTEGER  shift, and go to state 13

    $default  reduce using rule 25 (Statements)

    Type         go to state 49
    Statements   go to state 50
    Declaration  go to state 51
    Statement    go to state 52
    Assignment   go to state 53
    MethodCall   go to state 54
    IfElse       go to state 55
    While        go to state 56
    DoWhile      go to state 57
    Print        go to state 58


State 43

   11 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACE MethodBody T_CLOSEBRACE .

    $default  reduce using rule 11 (Method)


State 44

   14 Type: T_ID .
   55 Assignment: T_ID . T_ASSIGN Expression T_SEMICOLON
   56           | T_ID . T_DOT T_ID T_ASSIGN Expression T_SEMICOLON
   57 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON
   58           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON

    T_ASSIGN     shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_DOT        shift, and go to state 61

    $default  reduce using rule 14 (Type)


State 45

   62 DoWhile: T_DO . T_OPENBRACE BlockStatements T_CLOSEBRACE T_WHILE T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

    T_OPENBRACE  shift, and go to state 62


State 46

   59 IfElse: T_IF . Expression T_OPENBRACE BlockStatements T_CLOSEBRACE
   60       | T_IF . Expression T_OPENBRACE BlockStatements T_CLOSEBRACE T_ELSE T_OPENBRACE BlockStatements T_CLOSEBRACE

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 71
    MethodCall  go to state 72


State 47

   61 While: T_WHILE . Expression T_OPENBRACE BlockStatements T_CLOSEBRACE

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 73
    MethodCall  go to state 72


State 48

   63 Print: T_PRINT . Expression T_SEMICOLON

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 74
    MethodCall  go to state 72


State 49

   28 Declaration: Type . Vairables T_SEMICOLON

    T_ID  shift, and go to state 75

    Vairables  go to state 76


State 50

   20 MethodBody: Declarations Statements . Return

    T_RETURN  shift, and go to state 77

    $default  reduce using rule 27 (Return)

    Return  go to state 78


State 51

   22 Declarations: Declarations Declaration .

    $default  reduce using rule 22 (Declarations)


State 52

   24 Statements: Statement . Statements

    T_ID     shift, and go to state 79
    T_DO     shift, and go to state 45
    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_PRINT  shift, and go to state 48

    $default  reduce using rule 25 (Statements)

    Statements  go to state 80
    Statement   go to state 52
    Assignment  go to state 53
    MethodCall  go to state 54
    IfElse      go to state 55
    While       go to state 56
    DoWhile     go to state 57
    Print       go to state 58


State 53

   29 Statement: Assignment .

    $default  reduce using rule 29 (Statement)


State 54

   30 Statement: MethodCall .

    $default  reduce using rule 30 (Statement)


State 55

   31 Statement: IfElse .

    $default  reduce using rule 31 (Statement)


State 56

   32 Statement: While .

    $default  reduce using rule 32 (Statement)


State 57

   33 Statement: DoWhile .

    $default  reduce using rule 33 (Statement)


State 58

   34 Statement: Print .

    $default  reduce using rule 34 (Statement)


State 59

   55 Assignment: T_ID T_ASSIGN . Expression T_SEMICOLON

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 81
    MethodCall  go to state 72


State 60

   57 MethodCall: T_ID T_OPENPAREN . Arguments T_CLOSEPAREN T_SEMICOLON

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    $default  reduce using rule 65 (Arguments)

    Expression  go to state 82
    MethodCall  go to state 72
    Arguments   go to state 83
    Argument    go to state 84


State 61

   56 Assignment: T_ID T_DOT . T_ID T_ASSIGN Expression T_SEMICOLON
   58 MethodCall: T_ID T_DOT . T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON

    T_ID  shift, and go to state 85


State 62

   62 DoWhile: T_DO T_OPENBRACE . BlockStatements T_CLOSEBRACE T_WHILE T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

    T_ID     shift, and go to state 79
    T_DO     shift, and go to state 45
    T_IF     shift, and go to state 46
    T_WHILE  shift, and go to state 47
    T_PRINT  shift, and go to state 48

    Statement        go to state 86
    Assignment       go to state 53
    MethodCall       go to state 54
    IfElse           go to state 55
    While            go to state 56
    DoWhile          go to state 57
    Print            go to state 58
    BlockStatements  go to state 87


State 63

   50 Expression: T_NUMBER .

    $default  reduce using rule 50 (Expression)


State 64

   46 Expression: T_ID .
   47           | T_ID . T_DOT T_ID
   57 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON
   58           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON

    T_OPENPAREN  shift, and go to state 60
    T_DOT        shift, and go to state 88

    $default  reduce using rule 46 (Expression)


State 65

   45 Expression: T_MINUS . Expression

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 89
    MethodCall  go to state 72


State 66

   44 Expression: T_NOT . Expression

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 90
    MethodCall  go to state 72


State 67

   49 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 91
    MethodCall  go to state 72


State 68

   53 Expression: T_NEW . T_ID
   54           | T_NEW . T_ID T_OPENPAREN Argument T_CLOSEPAREN

    T_ID  shift, and go to state 92


State 69

   51 Expression: T_TRUE .

    $default  reduce using rule 51 (Expression)


State 70

   52 Expression: T_FALSE .

    $default  reduce using rule 52 (Expression)


State 71

   35 Expression: Expression . T_PLUS Expression
   36           | Expression . T_MINUS Expression
   37           | Expression . T_MULTIPLY Expression
   38           | Expression . T_DIVIDE Expression
   39           | Expression . T_LARGERTHAN Expression
   40           | Expression . T_LARGEREQUAL Expression
   41           | Expression . T_EQUALS Expression
   42           | Expression . T_AND Expression
   43           | Expression . T_OR Expression
   59 IfElse: T_IF Expression . T_OPENBRACE BlockStatements T_CLOSEBRACE
   60       | T_IF Expression . T_OPENBRACE BlockStatements T_CLOSEBRACE T_ELSE T_OPENBRACE BlockStatements T_CLOSEBRACE

    T_PLUS         shift, and go to state 93
    T_MINUS        shift, and go to state 94
    T_MULTIPLY     shift, and go to state 95
    T_DIVIDE       shift, and go to state 96
    T_LARGERTHAN   shift, and go to state 97
    T_LARGEREQUAL  shift, and go to state 98
    T_EQUALS       shift, and go to state 99
    T_AND          shift, and go to state 100
    T_OR           shift, and go to state 101
    T_OPENBRACE    shift, and go to state 102


State 72

   48 Expression: MethodCall .

    $default  reduce using rule 48 (Expression)


State 73

   35 Expression: Expression . T_PLUS Expression
   36           | Expression . T_MINUS Expression
   37           | Expression . T_MULTIPLY Expression
   38           | Expression . T_DIVIDE Expression
   39           | Expression . T_LARGERTHAN Expression
   40           | Expression . T_LARGEREQUAL Expression
   41           | Expression . T_EQUALS Expression
   42           | Expression . T_AND Expression
   43           | Expression . T_OR Expression
   61 While: T_WHILE Expression . T_OPENBRACE BlockStatements T_CLOSEBRACE

    T_PLUS         shift, and go to state 93
    T_MINUS        shift, and go to state 94
    T_MULTIPLY     shift, and go to state 95
    T_DIVIDE       shift, and go to state 96
    T_LARGERTHAN   shift, and go to state 97
    T_LARGEREQUAL  shift, and go to state 98
    T_EQUALS       shift, and go to state 99
    T_AND          shift, and go to state 100
    T_OR           shift, and go to state 101
    T_OPENBRACE    shift, and go to state 103


State 74

   35 Expression: Expression . T_PLUS Expression
   36           | Expression . T_MINUS Expression
   37           | Expression . T_MULTIPLY Expression
   38           | Expression . T_DIVIDE Expression
   39           | Expression . T_LARGERTHAN Expression
   40           | Expression . T_LARGEREQUAL Expression
   41           | Expression . T_EQUALS Expression
   42           | Expression . T_AND Expression
   43           | Expression . T_OR Expression
   63 Print: T_PRINT Expression . T_SEMICOLON

    T_PLUS         shift, and go to state 93
    T_MINUS        shift, and go to state 94
    T_MULTIPLY     shift, and go to state 95
    T_DIVIDE       shift, and go to state 96
    T_LARGERTHAN   shift, and go to state 97
    T_LARGEREQUAL  shift, and go to state 98
    T_EQUALS       shift, and go to state 99
    T_AND          shift, and go to state 100
    T_OR           shift, and go to state 101
    T_SEMICOLON    shift, and go to state 104


State 75

   70 Vairables: T_ID .

    $default  reduce using rule 70 (Vairables)


State 76

   28 Declaration: Type Vairables . T_SEMICOLON
   71 Vairables: Vairables . T_COMMA T_ID

    T_COMMA      shift, and go to state 105
    T_SEMICOLON  shift, and go to state 106


State 77

   26 Return: T_RETURN . Expression T_SEMICOLON

    T_NUMBER     shift, and go to state 63
    T_ID         shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_NOT        shift, and go to state 66
    T_OPENPAREN  shift, and go to state 67
    T_NEW        shift, and go to state 68
    T_TRUE       shift, and go to state 69
    T_FALSE      shift, and go to state 70

    Expression  go to state 107
    MethodCall  go to state 72


State 78

   20 MethodBody: Declarations Statements Return .

    $default  reduce using rule 20 (MethodBody)


State 79

   55 Assignment: T_ID . T_ASSIGN Expression T_SEMICOLON
   56           | T_ID . T_DOT T_ID T_ASSIGN Expression T_SEMICOLON
   57 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON
   58           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN T_SEMICOLON

    T_ASSIGN     shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_DOT        shift, and go to state 61


State 80

   24 Statements: Statement Statements .

    $default  reduce using rule 24 (Statements)


State 81

   35 Expression: Expression . T_PLUS Expression
   36           | Expression . T_MINUS Expression
   37           | Expression . T_MULTIPLY Expression
   38           | Expression . T_DIVIDE Expression
   39           | Expression . T_LARGERTHAN Expression
   40           | Expression . T_LARGEREQUAL Expression
   41           | Expression . T_EQUALS Expression
   42           | Expression . T_AND Expression
   43           | Expression . T_OR Expression
   55 Assignment: T_ID T_ASSIGN Expression . T_SEMICOLON

    T_PLUS         shift, and go to state 93
    T_MINUS        shift, and go to state 94
    T_MULTIPLY     shift, and go to state 95
    T_DIVIDE       shift, and go to state 96
    T_LARGERTHAN   shift, and go to state 97
    T_LARGEREQUAL  shift, and go to state 98
    T_EQUALS       shift, and go to state 99
    T_AND          shift, and go to state 100
    T_OR           shift, and go to state 101
    T_SEMICOLON    shift, and go to state 108


State 82

   35 Expression: Expression . T_PLUS Expression
   36           | Expression . T_MINUS Expression
   37           | Expression . T_MULTIPLY Expression
   38           | Expression . T_DIVIDE Expression
   39           | Expression . T_LARGERTHAN Expression
   40           | Expression . T_LARGEREQUAL Expression
   41           | Expression . T_EQUALS Expression
   42           | Expression . T_AND Expression
   43           | Expression . T_OR Expression
   67 Argument: Expression .

    T_PLUS         shift, and go to state 93
    T_MINUS        shift, and go to state 94
    T_MULTIPLY     shift, and go to state 95
    T_DIVIDE       shift, and go to state 96
    T_LARGERTHAN   shift, and go to state 97
    T_LARGEREQUAL  shift, and go to state 98
    T_EQUALS       shift, and go to state 99
    T_AND          shift, and go to state 100
    T_OR           shift, and go to state 101

    $default  reduce using rule 67 (Argument)


State 83

   57 MethodCall: T_ID T_OPENPAREN Arguments . T_CLOSEPAREN T_SEMICOLON

    T_CLOSEPAREN  shift, and go to state 109


State 84
